Version 0.0.2

- Inheritance: Replacing members of parent is possible.