@@ -2,7 +2,7 @@ Package: aoos
 Type: Package
 Title: Another Object Orientation System
 Version: 0.0.2
-Date: 2014-11-06
+Date: 2014-11-09
 Author: Sebastian Warnholz
 Maintainer: Sebastian Warnholz <wahani@gmail.com>
 URL: https://github.com/wahani/aoos
